2009-11-28  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] style-queue should report style errors to bugzilla
        https://bugs.webkit.org/show_bug.cgi?id=31945

        Currently, we're just logging the style errors locally.  With this
        patch we'll actually log the errors to bugzilla.  Note: I plan to run
        with the "local-only" logging during development.

        * Scripts/modules/commands/queues.py:
        * Scripts/modules/scm.py:

2009-11-28  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] style-queue shouldn't reject patches from the commit-queue
        https://bugs.webkit.org/show_bug.cgi?id=31944

        Currently the style-queue subprocess gets confused and thinks its the
        commit-queue.  If the patch has an error, it rejects it from the
        commit-queue.  Instead, we should have style-queue specific logic.
        This patch doesn't add that logic, but it gives us a callback we can
        use to add that logic.

        * Scripts/modules/buildsteps.py:
        * Scripts/modules/commands/queues.py:
        * Scripts/modules/landingsequence.py:

2009-11-27  Adam Barth  <abarth@webkit.org>

        Rubber stamped by Eric Seidel.

        Rename CommitQueueStatus to QueueStatusServer to allow for more queues.

        * CommitQueueStatus: Removed.
        * CommitQueueStatus/app.yaml: Removed.
        * CommitQueueStatus/filters: Removed.
        * CommitQueueStatus/filters/__init__.py: Removed.
        * CommitQueueStatus/filters/webkit_extras.py: Removed.
        * CommitQueueStatus/index.html: Removed.
        * CommitQueueStatus/index.yaml: Removed.
        * CommitQueueStatus/queue_status.py: Removed.
        * CommitQueueStatus/stylesheets: Removed.
        * CommitQueueStatus/stylesheets/main.css: Removed.
        * CommitQueueStatus/update_status.html: Removed.
        * QueueStatusServer: Copied from WebKitTools/CommitQueueStatus.
